examples/avm-res-containerservice-managedcluster/0.4.2/submodules/agentpool/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# Agent Pool submodule

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.12)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.7)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.this_create_before_destroy](https://registry.terraform.io/providers/azure/azapi/latest/docs/resources/resource) (resource)
- [terraform_data.name_keeper](https://registry.terraform.io/providers/hashicorp/terraform/latest/docs/resources/data) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the resource.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The parent resource ID for this resource.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_availability_zones"></a> [availability\_zones](#input\_availability\_zones)

Description: The list of Availability zones to use for nodes. This can only be specified if the AgentPoolType property is 'VirtualMachineScaleSets'.

Type: `list(string)`

Default: `null`

### <a name="input_capacity_reservation_group_id"></a> [capacity\_reservation\_group\_id](#input\_capacity\_reservation\_group\_id)

Description: The fully qualified resource ID of the Capacity Reservation Group to provide virtual machines from a reserved group of Virtual Machines. This is of the form: '/subscriptions/{subscriptionId}/resourcegroups/{resourceGroupName}/providers/Microsoft.Compute/capacityreservationgroups/{capacityReservationGroupName}' Customers use it to create an agentpool with a specified CRG. For more information see [Capacity Reservation](https://learn.microsoft.com/en-us/azure/virtual-machines/capacity-reservation-overview)

Type: `string`

Default: `null`

### <a name="input_count_of"></a> [count\_of](#input\_count\_of)

Description: Number of agents (VMs) to host docker containers. Allowed values must be in the range of 0 to 1000 (inclusive) for user pools and in the range of 1 to 1000 (inclusive) for system pools. The default valueis 1.

Type: `number`

Default: `null`

### <a name="input_create_before_destroy"></a> [create\_before\_destroy](#input\_create\_before\_destroy)

Description: Whether to create a new resource before destroying the old one when the resource name changes.

Type: `bool`

Default: `false`

### <a name="input_creation_data"></a> [creation\_data](#input\_creation\_data)

Description: Data used when creating a target resource from a source resource.

- `source_resource_id` - This is the ARM ID of the source object to be used to create the target object.

Type:

```hcl
object({
    source_resource_id = optional(string)
  })
```

Default: `null`

### <a name="input_enable_auto_scaling"></a> [enable\_auto\_scaling](#input\_enable\_auto\_scaling)

Description: Whether to enable auto-scaler

Type: `bool`

Default: `null`

### <a name="input_enable_encryption_at_host"></a> [enable\_encryption\_at\_host](#input\_enable\_encryption\_at\_host)

Description: Whether to enable host based OS and data drive encryption. This is only supported on certain VM sizes and in certain Azure regions. For more information, see: https://docs.microsoft.com/azure/aks/enable-host-encryption

Type: `bool`

Default: `null`

### <a name="input_enable_fips"></a> [enable\_fips](#input\_enable\_fips)

Description: Whether to use a FIPS-enabled OS. See [Add a FIPS-enabled node pool](https://docs.microsoft.com/azure/aks/use-multiple-node-pools#add-a-fips-enabled-node-pool-preview) for more details.

Type: `bool`

Default: `null`

### <a name="input_enable_node_public_ip"></a> [enable\_node\_public\_ip](#input\_enable\_node\_public\_ip)

Description: Whether each node is allocated its own public IP. Some scenarios may require nodes in a node pool to receive their own dedicated public IP addresses. A common scenario is for gaming workloads, where a console needs to make a direct connection to a cloud virtual machine to minimize hops. For more information see [assigning a public IP per node](https://docs.microsoft.com/azure/aks/use-multiple-node-pools#assign-a-public-ip-per-node-for-your-node-pools). The default is false.

Type: `bool`

Default: `null`

### <a name="input_enable_ultra_ssd"></a> [enable\_ultra\_ssd](#input\_enable\_ultra\_ssd)

Description: Whether to enable UltraSSD

Type: `bool`

Default: `null`

### <a name="input_gateway_profile"></a> [gateway\_profile](#input\_gateway\_profile)

Description: Profile of the managed cluster gateway agent pool.

- `public_ip_prefix_size` - The Gateway agent pool associates one public IPPrefix for each static egress gateway to provide public egress. The size of Public IPPrefix should be selected by the user. Each node in the agent pool is assigned with one IP from the IPPrefix. The IPPrefix size thus serves as a cap on the size of the Gateway agent pool. Due to Azure public IPPrefix size limitation, the valid value range is [28, 31] (/31 = 2 nodes/IPs, /30 = 4 nodes/IPs, /29 = 8 nodes/IPs, /28 = 16 nodes/IPs). The default value is 31.

Type:

```hcl
object({
    public_ip_prefix_size = optional(number)
  })
```

Default: `null`

### <a name="input_gpu_instance_profile"></a> [gpu\_instance\_profile](#input\_gpu\_instance\_profile)

Description: GPUInstanceProfile to be used to specify GPU MIG instance profile for supported GPU VM SKU.

Type: `string`

Default: `null`

### <a name="input_gpu_profile"></a> [gpu\_profile](#input\_gpu\_profile)

Description: GPU settings for the Agent Pool.

- `driver` - Whether to install GPU drivers. When it's not specified, default is Install.

Type:

```hcl
object({
    driver = optional(string)
  })
```

Default: `null`

### <a name="input_host_group_id"></a> [host\_group\_id](#input\_host\_group\_id)

Description: The fully qualified resource ID of the Dedicated Host Group to provision virtual machines from, used only in creation scenario and not allowed to changed once set. This is of the form: /subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Compute/hostGroups/{hostGroupName}. For more information see [Azure dedicated hosts](https://docs.microsoft.com/azure/virtual-machines/dedicated-hosts).

Type: `string`

Default: `null`

### <a name="input_kubelet_config"></a> [kubelet\_config](#input\_kubelet\_config)

Description: Kubelet configurations of agent nodes. See [AKS custom node configuration](https://docs.microsoft.com/azure/aks/custom-node-configuration) for more details.

- `allowed_unsafe_sysctls` - Allowed list of unsafe sysctls or unsafe sysctl patterns (ending in `*`).
- `container_log_max_files` - The maximum number of container log files that can be present for a container. The number must be ≥ 2.
- `container_log_max_size_mb` - The maximum size (e.g. 10Mi) of container log file before it is rotated.
- `cpu_cfs_quota` - If CPU CFS quota enforcement is enabled for containers that specify CPU limits. The default is true.
- `cpu_cfs_quota_period` - The CPU CFS quota period value. The default is '100ms.' Valid values are a sequence of decimal numbers with an optional fraction and a unit suffix. For example: '300ms', '2h45m'. Supported units are 'ns', 'us', 'ms', 's', 'm', and 'h'.
- `cpu_manager_policy` - The CPU Manager policy to use. The default is 'none'. See [Kubernetes CPU management policies](https://kubernetes.io/docs/tasks/administer-cluster/cpu-management-policies/#cpu-management-policies) for more information. Allowed values are 'none' and 'static'.
- `fail_swap_on` - If set to true it will make the Kubelet fail to start if swap is enabled on the node.
- `image_gc_high_threshold` - The percent of disk usage after which image garbage collection is always run. To disable image garbage collection, set to 100. The default is 85%
- `image_gc_low_threshold` - The percent of disk usage before which image garbage collection is never run. This cannot be set higher than imageGcHighThreshold. The default is 80%
- `pod_max_pids` - The maximum number of processes per pod.
- `topology_manager_policy` - The Topology Manager policy to use. For more information see [Kubernetes Topology Manager](https://kubernetes.io/docs/tasks/administer-cluster/topology-manager). The default is 'none'. Allowed values are 'none', 'best-effort', 'restricted', and 'single-numa-node'.

Type:

```hcl
object({
    allowed_unsafe_sysctls    = optional(list(string))
    container_log_max_files   = optional(number)
    container_log_max_size_mb = optional(number)
    cpu_cfs_quota             = optional(bool)
    cpu_cfs_quota_period      = optional(string)
    cpu_manager_policy        = optional(string)
    fail_swap_on              = optional(bool)
    image_gc_high_threshold   = optional(number)
    image_gc_low_threshold    = optional(number)
    pod_max_pids              = optional(number)
    topology_manager_policy   = optional(string)
  })
```

Default: `null`

### <a name="input_kubelet_disk_type"></a> [kubelet\_disk\_type](#input\_kubelet\_disk\_type)

Description: Determines the placement of emptyDir volumes, container runtime data root, and Kubelet ephemeral storage.

Type: `string`

Default: `null`

### <a name="input_linux_os_config"></a> [linux\_os\_config](#input\_linux\_os\_config)

Description: OS configurations of Linux agent nodes. See [AKS custom node configuration](https://docs.microsoft.com/azure/aks/custom-node-configuration) for more details.

- `swap_file_size_mb` - The size in MB of a swap file that will be created on each node.
- `sysctls` - Sysctl settings for Linux agent nodes.
  - `fs_aio_max_nr` - Sysctl setting fs.aio-max-nr.
  - `fs_file_max` - Sysctl setting fs.file-max.
  - `fs_inotify_max_user_watches` - Sysctl setting fs.inotify.max\_user\_watches.
  - `fs_nr_open` - Sysctl setting fs.nr\_open.
  - `kernel_threads_max` - Sysctl setting kernel.threads-max.
  - `net_core_netdev_max_backlog` - Sysctl setting net.core.netdev\_max\_backlog.
  - `net_core_optmem_max` - Sysctl setting net.core.optmem\_max.
  - `net_core_rmem_default` - Sysctl setting net.core.rmem\_default.
  - `net_core_rmem_max` - Sysctl setting net.core.rmem\_max.
  - `net_core_somaxconn` - Sysctl setting net.core.somaxconn.
  - `net_core_wmem_default` - Sysctl setting net.core.wmem\_default.
  - `net_core_wmem_max` - Sysctl setting net.core.wmem\_max.
  - `net_ipv4_ip_local_port_range` - Sysctl setting net.ipv4.ip\_local\_port\_range.
  - `net_ipv4_neigh_default_gc_thresh1` - Sysctl setting net.ipv4.neigh.default.gc\_thresh1.
  - `net_ipv4_neigh_default_gc_thresh2` - Sysctl setting net.ipv4.neigh.default.gc\_thresh2.
  - `net_ipv4_neigh_default_gc_thresh3` - Sysctl setting net.ipv4.neigh.default.gc\_thresh3.
  - `net_ipv4_tcp_fin_timeout` - Sysctl setting net.ipv4.tcp\_fin\_timeout.
  - `net_ipv4_tcp_keepalive_probes` - Sysctl setting net.ipv4.tcp\_keepalive\_probes.
  - `net_ipv4_tcp_keepalive_time` - Sysctl setting net.ipv4.tcp\_keepalive\_time.
  - `net_ipv4_tcp_max_syn_backlog` - Sysctl setting net.ipv4.tcp\_max\_syn\_backlog.
  - `net_ipv4_tcp_max_tw_buckets` - Sysctl setting net.ipv4.tcp\_max\_tw\_buckets.
  - `net_ipv4_tcp_tw_reuse` - Sysctl setting net.ipv4.tcp\_tw\_reuse.
  - `net_ipv4_tcpkeepalive_intvl` - Sysctl setting net.ipv4.tcp\_keepalive\_intvl.
  - `net_netfilter_nf_conntrack_buckets` - Sysctl setting net.netfilter.nf\_conntrack\_buckets.
  - `net_netfilter_nf_conntrack_max` - Sysctl setting net.netfilter.nf\_conntrack\_max.
  - `vm_max_map_count` - Sysctl setting vm.max\_map\_count.
  - `vm_swappiness` - Sysctl setting vm.swappiness.
  - `vm_vfs_cache_pressure` - Sysctl setting vm.vfs\_cache\_pressure.
- `transparent_huge_page_defrag` - Whether the kernel should make aggressive use of memory compaction to make more hugepages available. Valid values are 'always', 'defer', 'defer+madvise', 'madvise' and 'never'. The default is 'madvise'. For more information see [Transparent Hugepages](https://www.kernel.org/doc/html/latest/admin-guide/mm/transhuge.html#admin-guide-transhuge).
- `transparent_huge_page_enabled` - Whether transparent hugepages are enabled. Valid values are 'always', 'madvise', and 'never'. The default is 'always'. For more information see [Transparent Hugepages](https://www.kernel.org/doc/html/latest/admin-guide/mm/transhuge.html#admin-guide-transhuge).

Type:

```hcl
object({
    swap_file_size_mb = optional(number)
    sysctls = optional(object({
      fs_aio_max_nr                      = optional(number)
      fs_file_max                        = optional(number)
      fs_inotify_max_user_watches        = optional(number)
      fs_nr_open                         = optional(number)
      kernel_threads_max                 = optional(number)
      net_core_netdev_max_backlog        = optional(number)
      net_core_optmem_max                = optional(number)
      net_core_rmem_default              = optional(number)
      net_core_rmem_max                  = optional(number)
      net_core_somaxconn                 = optional(number)
      net_core_wmem_default              = optional(number)
      net_core_wmem_max                  = optional(number)
      net_ipv4_ip_local_port_range       = optional(string)
      net_ipv4_neigh_default_gc_thresh1  = optional(number)
      net_ipv4_neigh_default_gc_thresh2  = optional(number)
      net_ipv4_neigh_default_gc_thresh3  = optional(number)
      net_ipv4_tcp_fin_timeout           = optional(number)
      net_ipv4_tcp_keepalive_probes      = optional(number)
      net_ipv4_tcp_keepalive_time        = optional(number)
      net_ipv4_tcp_max_syn_backlog       = optional(number)
      net_ipv4_tcp_max_tw_buckets        = optional(number)
      net_ipv4_tcp_tw_reuse              = optional(bool)
      net_ipv4_tcpkeepalive_intvl        = optional(number)
      net_netfilter_nf_conntrack_buckets = optional(number)
      net_netfilter_nf_conntrack_max     = optional(number)
      vm_max_map_count                   = optional(number)
      vm_swappiness                      = optional(number)
      vm_vfs_cache_pressure              = optional(number)
    }))
    transparent_huge_page_defrag  = optional(string)
    transparent_huge_page_enabled = optional(string)
  })
```

Default: `null`

### <a name="input_local_dns_profile"></a> [local\_dns\_profile](#input\_local\_dns\_profile)

Description: Configures the per-node local DNS, with VnetDNS and KubeDNS overrides. LocalDNS helps improve performance and reliability of DNS resolution in an AKS cluster. For more details see aka.ms/aks/localdns.

- `kube_dns_overrides` - LocalDNSOverrides is a map of zone names for Vnet and Kube DNS overrides.
- `mode` - Mode of enablement for localDNS.
- `vnet_dns_overrides` - LocalDNSOverrides is a map of zone names for Vnet and Kube DNS overrides.

Type:

```hcl
object({
    kube_dns_overrides = optional(map(object({
      cache_duration_in_seconds       = optional(number)
      forward_destination             = optional(string)
      forward_policy                  = optional(string)
      max_concurrent                  = optional(number)
      protocol                        = optional(string)
      query_logging                   = optional(string)
      serve_stale                     = optional(string)
      serve_stale_duration_in_seconds = optional(number)
    })))
    mode = optional(string)
    vnet_dns_overrides = optional(map(object({
      cache_duration_in_seconds       = optional(number)
      forward_destination             = optional(string)
      forward_policy                  = optional(string)
      max_concurrent                  = optional(number)
      protocol                        = optional(string)
      query_logging                   = optional(string)
      serve_stale                     = optional(string)
      serve_stale_duration_in_seconds = optional(number)
    })))
  })
```

Default: `null`

### <a name="input_max_count"></a> [max\_count](#input\_max\_count)

Description: The maximum number of nodes for auto-scaling

Type: `number`

Default: `null`

### <a name="input_max_pods"></a> [max\_pods](#input\_max\_pods)

Description: The maximum number of pods that can run on a node.

Type: `number`

Default: `null`

### <a name="input_message_of_the_day"></a> [message\_of\_the\_day](#input\_message\_of\_the\_day)

Description: Message of the day for Linux nodes, base64-encoded. A base64-encoded string which will be written to /etc/motd after decoding. This allows customization of the message of the day for Linux nodes. It must not be specified for Windows nodes. It must be a static string (i.e., will be printed raw and not be executed as a script).

Type: `string`

Default: `null`

### <a name="input_min_count"></a> [min\_count](#input\_min\_count)

Description: The minimum number of nodes for auto-scaling

Type: `number`

Default: `null`

### <a name="input_mode"></a> [mode](#input\_mode)

Description: The mode of an agent pool. A cluster must have at least one 'System' Agent Pool at all times. For additional information on agent pool restrictions and best practices, see: https://docs.microsoft.com/azure/aks/use-system-pools

Type: `string`

Default: `null`

### <a name="input_network_profile"></a> [network\_profile](#input\_network\_profile)

Description: Network settings of an agent pool.

- `allowed_host_ports` - The port ranges that are allowed to access. The specified ranges are allowed to overlap.
- `application_security_groups` - The IDs of the application security groups which agent pool will associate when created.
- `node_public_ip_tags` - The list of tags associated with the node public IP address.

Type:

```hcl
object({
    allowed_host_ports = optional(list(object({
      port_end   = optional(number)
      port_start = optional(number)
      protocol   = optional(string)
    })))
    application_security_groups = optional(list(string))
    node_public_ip_tags = optional(list(object({
      ip_tag_type = optional(string)
      tag         = optional(string)
    })))
  })
```

Default: `null`

### <a name="input_node_labels"></a> [node\_labels](#input\_node\_labels)

Description: The node labels to be persisted across all nodes in agent pool.

Type: `map(string)`

Default: `null`

### <a name="input_node_public_ip_prefix_id"></a> [node\_public\_ip\_prefix\_id](#input\_node\_public\_ip\_prefix\_id)

Description: The public IP prefix ID which VM nodes should use IPs from. This is of the form: /subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Network/publicIPPrefixes/{publicIPPrefixName}

Type: `string`

Default: `null`

### <a name="input_node_taints"></a> [node\_taints](#input\_node\_taints)

Description: The taints added to new nodes during node pool create and scale. For example, key=value:NoSchedule.

Type: `list(string)`

Default: `null`

### <a name="input_orchestrator_version"></a> [orchestrator\_version](#input\_orchestrator\_version)

Description: The version of Kubernetes specified by the user. Both patch version <major.minor.patch> (e.g. 1.20.13) and <major.minor> (e.g. 1.20) are supported. When <major.minor> is specified, the latest supported GA patch version is chosen automatically. Updating the cluster with the same <major.minor> once it has been created (e.g. 1.14.x -> 1.14) will not trigger an upgrade, even if a newer patch version is available. As a best practice, you should upgrade all node pools in an AKS cluster to the same Kubernetes version. The node pool version must have the same major version as the control plane. The node pool minor version must be within two minor versions of the control plane version. The node pool version cannot be greater than the control plane version. For more information see [upgrading a node pool](https://docs.microsoft.com/azure/aks/use-multiple-node-pools#upgrade-a-node-pool).

Type: `string`

Default: `null`

### <a name="input_os_disk_size_gb"></a> [os\_disk\_size\_gb](#input\_os\_disk\_size\_gb)

Description: OS Disk Size in GB to be used to specify the disk size for every machine in the master/agent pool. If you specify 0, it will apply the default osDisk size according to the vmSize specified.

Type: `number`

Default: `null`

### <a name="input_os_disk_type"></a> [os\_disk\_type](#input\_os\_disk\_type)

Description: The OS disk type to be used for machines in the agent pool. The default is 'Ephemeral' if the VM supports it and has a cache disk larger than the requested OSDiskSizeGB. Otherwise, defaults to 'Managed'. May not be changed after creation. For more information see [Ephemeral OS](https://docs.microsoft.com/azure/aks/cluster-configuration#ephemeral-os).

Type: `string`

Default: `null`

### <a name="input_os_sku"></a> [os\_sku](#input\_os\_sku)

Description: Specifies the OS SKU used by the agent pool. The default is Ubuntu if OSType is Linux. The default is Windows2019 when Kubernetes <= 1.24 or Windows2022 when Kubernetes >= 1.25 if OSType is Windows.

Type: `string`

Default: `null`

### <a name="input_os_type"></a> [os\_type](#input\_os\_type)

Description: The operating system type. The default is Linux.

Type: `string`

Default: `null`

### <a name="input_output_data_only"></a> [output\_data\_only](#input\_output\_data\_only)

Description: Whether to disable creation of the resource and only output a the resource's body properties.

Type: `bool`

Default: `false`

### <a name="input_pod_ip_allocation_mode"></a> [pod\_ip\_allocation\_mode](#input\_pod\_ip\_allocation\_mode)

Description: Pod IP Allocation Mode. The IP allocation mode for pods in the agent pool. Must be used with podSubnetId. The default is 'DynamicIndividual'.

Type: `string`

Default: `null`

### <a name="input_pod_subnet_id"></a> [pod\_subnet\_id](#input\_pod\_subnet\_id)

Description: The ID of the subnet which pods will join when launched. If omitted, pod IPs are statically assigned on the node subnet (see vnetSubnetID for more details). This is of the form: /subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Network/virtualNetworks/{virtualNetworkName}/subnets/{subnetName}

Type: `string`

Default: `null`

### <a name="input_proximity_placement_group_id"></a> [proximity\_placement\_group\_id](#input\_proximity\_placement\_group\_id)

Description: The ID for Proximity Placement Group.

Type: `string`

Default: `null`

### <a name="input_scale_down_mode"></a> [scale\_down\_mode](#input\_scale\_down\_mode)

Description: Describes how VMs are added to or removed from Agent Pools. See [billing states](https://docs.microsoft.com/azure/virtual-machines/states-billing).

Type: `string`

Default: `null`

### <a name="input_scale_set_eviction_policy"></a> [scale\_set\_eviction\_policy](#input\_scale\_set\_eviction\_policy)

Description: The Virtual Machine Scale Set eviction policy. The eviction policy specifies what to do with the VM when it is evicted. The default is Delete. For more information about eviction see [spot VMs](https://docs.microsoft.com/azure/virtual-machines/spot-vms)

Type: `string`

Default: `null`

### <a name="input_scale_set_priority"></a> [scale\_set\_priority](#input\_scale\_set\_priority)

Description: The Virtual Machine Scale Set priority.

Type: `string`

Default: `null`

### <a name="input_security_profile"></a> [security\_profile](#input\_security\_profile)

Description: The security settings of an agent pool.

- `enable_secure_boot` - Secure Boot is a feature of Trusted Launch which ensures that only signed operating systems and drivers can boot. For more details, see aka.ms/aks/trustedlaunch.  If not specified, the default is false.
- `enable_vtpm` - vTPM is a Trusted Launch feature for configuring a dedicated secure vault for keys and measurements held locally on the node. For more details, see aka.ms/aks/trustedlaunch. If not specified, the default is false.
- `ssh_access` - SSH access method of an agent pool.

Type:

```hcl
object({
    enable_secure_boot = optional(bool)
    enable_vtpm        = optional(bool)
    ssh_access         = optional(string)
  })
```

Default: `null`

### <a name="input_spot_max_price"></a> [spot\_max\_price](#input\_spot\_max\_price)

Description: The max price (in US Dollars) you are willing to pay for spot instances. Possible values are any decimal value greater than zero or -1 which indicates default price to be up-to on-demand. Possible values are any decimal value greater than zero or -1 which indicates the willingness to pay any on-demand price. For more details on spot pricing, see [spot VMs pricing](https://docs.microsoft.com/azure/virtual-machines/spot-vms#pricing)

Type: `number`

Default: `null`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: The tags to be persisted on the agent pool virtual machine scale set.

Type: `map(string)`

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: Timeouts for create, read, update, and delete operations.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

### <a name="input_type"></a> [type](#input\_type)

Description: The type of Agent Pool.

Type: `string`

Default: `null`

### <a name="input_upgrade_settings"></a> [upgrade\_settings](#input\_upgrade\_settings)

Description: Settings for upgrading an agentpool

- `drain_timeout_in_minutes` - The drain timeout for a node. The amount of time (in minutes) to wait on eviction of pods and graceful termination per node. This eviction wait time honors waiting on pod disruption budgets. If this time is exceeded, the upgrade fails. If not specified, the default is 30 minutes.
- `max_surge` - The maximum number or percentage of nodes that are surged during upgrade. This can either be set to an integer (e.g. '5') or a percentage (e.g. '50%'). If a percentage is specified, it is the percentage of the total agent pool size at the time of the upgrade. For percentages, fractional nodes are rounded up. If not specified, the default is 10%. For more information, including best practices, see: https://learn.microsoft.com/en-us/azure/aks/upgrade-cluster
- `max_unavailable` - The maximum number or percentage of nodes that can be simultaneously unavailable during upgrade. This can either be set to an integer (e.g. '1') or a percentage (e.g. '5%'). If a percentage is specified, it is the percentage of the total agent pool size at the time of the upgrade. For percentages, fractional nodes are rounded up. If not specified, the default is 0. For more information, including best practices, see: https://learn.microsoft.com/en-us/azure/aks/upgrade-cluster
- `node_soak_duration_in_minutes` - The soak duration for a node. The amount of time (in minutes) to wait after draining a node and before reimaging it and moving on to next node. If not specified, the default is 0 minutes.
- `undrainable_node_behavior` - Defines the behavior for undrainable nodes during upgrade. The most common cause of undrainable nodes is Pod Disruption Budgets (PDBs), but other issues, such as pod termination grace period is exceeding the remaining per-node drain timeout or pod is still being in a running state, can also cause undrainable nodes.

Type:

```hcl
object({
    drain_timeout_in_minutes      = optional(number)
    max_surge                     = optional(string)
    max_unavailable               = optional(string, "0")
    node_soak_duration_in_minutes = optional(number)
    undrainable_node_behavior     = optional(string)
  })
```

Default: `null`

### <a name="input_virtual_machines_profile"></a> [virtual\_machines\_profile](#input\_virtual\_machines\_profile)

Description: Specifications on VirtualMachines agent pool.

- `scale` - Specifications on how to scale a VirtualMachines agent pool.
  - `manual` - Specifications on how to scale the VirtualMachines agent pool to a fixed size.

Type:

```hcl
object({
    scale = optional(object({
      manual = optional(list(object({
        count = optional(number)
        size  = optional(string)
      })))
    }))
  })
```

Default: `null`

### <a name="input_vm_size"></a> [vm\_size](#input\_vm\_size)

Description: The size of the agent pool VMs. VM size availability varies by region. If a node contains insufficient compute resources (memory, cpu, etc) pods might fail to run correctly. For more details on restricted VM sizes, see: https://docs.microsoft.com/azure/aks/quotas-skus-regions

Type: `string`

Default: `null`

### <a name="input_vnet_subnet_id"></a> [vnet\_subnet\_id](#input\_vnet\_subnet\_id)

Description: The ID of the subnet which agent pool nodes and optionally pods will join on startup. If this is not specified, a VNET and subnet will be generated and used. If no podSubnetID is specified, this applies to nodes and pods, otherwise it applies to just nodes. This is of the form: /subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Network/virtualNetworks/{virtualNetworkName}/subnets/{subnetName}

Type: `string`

Default: `null`

### <a name="input_windows_profile"></a> [windows\_profile](#input\_windows\_profile)

Description: The Windows agent pool's specific profile.

- `disable_outbound_nat` - Whether to disable OutboundNAT in windows nodes. The default value is false. Outbound NAT can only be disabled if the cluster outboundType is NAT Gateway and the Windows agent pool does not have node public IP enabled.

Type:

```hcl
object({
    disable_outbound_nat = optional(bool)
  })
```

Default: `null`

### <a name="input_workload_runtime"></a> [workload\_runtime](#input\_workload\_runtime)

Description: Determines the type of workload a node can run.

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_body_properties"></a> [body\_properties](#output\_body\_properties)

Description: If output\_data\_only is set to true, this output will contain the properties of the resource as defined in the body. Otherwise, it will be null.

### <a name="output_current_orchestrator_version"></a> [current\_orchestrator\_version](#output\_current\_orchestrator\_version)

Description: The version of Kubernetes the Agent Pool is running. If orchestratorVersion is a fully specified version <major.minor.patch>, this field will be exactly equal to it. If orchestratorVersion is <major.minor>, this field will contain the full <major.minor.patch> version being used.

### <a name="output_local_dns_profile_state"></a> [local\_dns\_profile\_state](#output\_local\_dns\_profile\_state)

Description: System-generated state of localDNS.

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the resource.

### <a name="output_node_image_version"></a> [node\_image\_version](#output\_node\_image\_version)

Description: The version of node image

### <a name="output_provisioning_state"></a> [provisioning\_state](#output\_provisioning\_state)

Description: The current deployment or provisioning state.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The ID of the created resource.

### <a name="output_type"></a> [type](#output\_type)

Description: Resource type

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
